deploy: f86bca8ca055b713551127b3c22d66e6beba39a0

--- a/business-and-employers/index.html
+++ b/business-and-employers/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Businesses and employers</h1>
           
-            <p class="small-text">Last updated&nbsp;November 13, 2020 at 9:42 AM</p>
+            <p class="small-text">Last updated&nbsp;November 17, 2020 at 11:56 AM</p>
           
         </div>
       </div>
@@ -210,7 +210,7 @@
 
 
 
-<h3>Financial and technical assistance for small businesses </h3>
+<h3>Financial and technical assistance for small businesses&nbsp;</h3>
 
 
 
@@ -327,7 +327,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4>What are excluded businesses? </h4>
+<h4>What are excluded businesses?&nbsp;</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -350,7 +350,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4>Can I apply for a loan guarantee if I am ineligible for federal disaster fund financing, such as a Small Business Administration (SBA) loan? </h4>
+<h4>Can I apply for a loan guarantee if I am ineligible for federal disaster fund financing, such as a Small Business Administration (SBA) loan?&nbsp;</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -419,7 +419,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4>How can I apply for a loan guarantee? </h4>
+<h4>How can I apply for a loan guarantee?&nbsp;</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -493,7 +493,7 @@
   <div class="card">
     <button class="card-header accordion-alpha" type="button" aria-expanded="false">
       <div class="accordion-title">
-<h4>Are faith-based businesses eligible for this loan guarantee program? </h4>
+<h4>Are faith-based businesses eligible for this loan guarantee program?&nbsp;</h4>
       </div>
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
@@ -540,29 +540,7 @@
 
 
 
-
-
-
-
-<cwds-accordion>
-  <div class="card">
-    <button class="card-header accordion-alpha" type="button" aria-expanded="false">
-      <div class="accordion-title">
-<h4>Should a business owner notify customers if an employee has been exposed to COVID-19?</h4>
-      </div>
-    </button>
-    <div class="card-container" aria-hidden="true" style="height: 0px;">
-      <div class="card-body">
-<p>You aren&#8217;t required to notify customers if an employee was exposed to COVID-19. You are required to notify the local health department if there are three or more cases of COVID-19 in your workplace in a two-week period.</p>
-<p>When a worker tests positive or has symptoms of COVID-19:</p>
-<ul><li>Send the worker home.</li><li>Work with your local health department to support isolation or quarantine, perform testing, and determine when the worker may return to work.&nbsp;</li></ul>
-<p>Follow the <a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--en.pdf">Employer playbook</a> which includes information on:</p>
-<ul><li>When and how an employer must report a COVID-19 positive employee</li><li>The definition of an outbreak.</li><li>Notifying workers who may have been exposed to COVID-19</li><li>Guidance about suspending operations</li></ul>
-
-      </div>
-    </div>
-  </div>
-</cwds-accordion>
+<p><a href="https://as-go-covid19-d-001.azurewebsites.net/wp-admin/edit.php">All Posts</a></p>
 
 
 
@@ -570,20 +548,43 @@
 
 
 
+<h4>What steps do I take if an employee tests positive in my business?</h4>
 
 
 
+<p>If an employer discovers a worker has tested positive for COVID-19 or has symptoms:</p>
 
 
 
+<ul><li>Send the worker home</li><li>Let them know about sick leave available through law and company policy</li><li><a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--en.pdf">Follow guidance</a> about isolation, quarantine, testing, and when the worker should return to work</li><li>Inform other workers who may have been exposed and provide:<ul><li>Healthcare consultations about their potential exposure</li><li>Instructions on getting tested</li><li>Information about isolation, quarantine, and symptoms</li></ul></li><li>Keep the identities of people with suspected or confirmed cases confidential</li><li>Provide sick leave policies that let sick workers stay home without penalty</li><li>Make workers aware of leave policies</li></ul>
 
 
 
+<p>Employers must report COVID-19 cases to local health departments (LHD) if:</p>
 
 
 
+<ul><li>They have three or more confirmed cases in two weeks</li><li>They are not a healthcare provider</li><li>The cases were not in a residential setting</li></ul>
 
 
+
+<p>Employers must report cases to the LHD where the employer is located and the LHD where the workers live. Employers must provide LHDs with:</p>
+
+
+
+<ul><li>A list of all workers at the site</li><li>Information about workers with confirmed cases:<ul><li>Job titles</li><li>Work areas</li><li><a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">Close contacts</a> with other employees</li><li>Date symptoms began</li><li>Shifts worked while infectious</li></ul></li></ul>
+
+
+
+<p>LHDs may ask for more information about workers with COVID, including their:</p>
+
+
+
+<ul><li>Job description</li><li>Location</li><li>Work schedule</li><li>City and county of residence</li></ul>
+
+
+
+<p>For more information about employer requirements, including cleaning and disinfection, see <a href="https://files.covid19.ca.gov/pdf/responding-to-covid19-workplace--en.pdf">Responding to COVID-19 in the Workplace for Employers (PDF)</a>.</p>
 
 
 
