--- a/tl/latest-news/index.html
+++ b/tl/latest-news/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Pinakabagong balita sa COVID-19</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Nobyembre 17, 2020 sa 12:00 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Nobyembre 17, 2020 sa 1:05 PM</p>
           
         </div>
       </div>
@@ -176,6 +176,14 @@
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--43141 -->November 16, 2020</small></p>
           <div class="card-text" lang="en-US">One-time funding will allow Project Roomkey operations to continue while transitioning to permanent housing Local governments are provided resources to place Project Roomkey clients into Section 8 apartments Funding nece...</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR20-303.aspx" lang="en-US" hreflang="en-US">State Officials Announce Latest COVID-19 Facts</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--ff475eed1bcbc22b82584ccf3e6fa8dc -->November 16, 2020</small></p>
+          <div class="card-text" lang="en-US">The California Department of Public Health (CDPH) today announced the most recent statistics on COVID-19.</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
