deploy: 87d4cd876e831d5cb11f1dc5ce3b2711ee8b322f

--- a/business-and-employers/index.html
+++ b/business-and-employers/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Businesses and employers</h1>
           
-            <p class="small-text">Last updated&nbsp;November 17, 2020 at 11:56 AM</p>
+            <p class="small-text">Last updated&nbsp;November 17, 2020 at 4:04 PM</p>
           
         </div>
       </div>
@@ -540,31 +540,49 @@
 
 
 
-<p><a href="https://as-go-covid19-d-001.azurewebsites.net/wp-admin/edit.php">All Posts</a></p>
 
 
 
 
-
-
-
+<cwds-accordion>
+  <div class="card">
+    <button class="card-header accordion-alpha" type="button" aria-expanded="false">
+      <div class="accordion-title">
 <h4>What steps do I take if an employee tests positive in my business?</h4>
-
-
-
+      </div>
+    </button>
+    <div class="card-container" aria-hidden="true" style="height: 0px;">
+      <div class="card-body">
 <p>If an employer discovers a worker has tested positive for COVID-19 or has symptoms:</p>
-
-
-
 <ul><li>Send the worker home</li><li>Let them know about sick leave available through law and company policy</li><li><a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--en.pdf">Follow guidance</a> about isolation, quarantine, testing, and when the worker should return to work</li><li>Inform other workers who may have been exposed and provide:<ul><li>Healthcare consultations about their potential exposure</li><li>Instructions on getting tested</li><li>Information about isolation, quarantine, and symptoms</li></ul></li><li>Keep the identities of people with suspected or confirmed cases confidential</li><li>Provide sick leave policies that let sick workers stay home without penalty</li><li>Make workers aware of leave policies</li></ul>
-
-
-
 <p>Employers must report COVID-19 cases to local health departments (LHD) if:</p>
-
-
-
 <ul><li>They have three or more confirmed cases in two weeks</li><li>They are not a healthcare provider</li><li>The cases were not in a residential setting</li></ul>
+<ul><li>A list of all workers at the site</li><li>Information about workers with confirmed cases:<ul><li>Job titles</li><li>Work areas</li><li><a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">Close contacts</a> with other employees</li><li>Date symptoms began</li><li>Shifts worked while infectious</li></ul></li></ul>
+<p>LHDs may ask for more information about workers with COVID, including their:</p>
+<ul><li>Job description</li><li>Location</li><li>Work schedule</li><li>City and county of residence</li></ul>
+<p>For more information about employer requirements, including cleaning and disinfection, see <a href="https://files.covid19.ca.gov/pdf/responding-to-covid19-workplace--en.pdf">Responding to COVID-19 in the Workplace for Employers (PDF)</a>.</p>
+
+      </div>
+    </div>
+  </div>
+</cwds-accordion>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -572,19 +590,19 @@
 
 
 
-<ul><li>A list of all workers at the site</li><li>Information about workers with confirmed cases:<ul><li>Job titles</li><li>Work areas</li><li><a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">Close contacts</a> with other employees</li><li>Date symptoms began</li><li>Shifts worked while infectious</li></ul></li></ul>
 
 
 
-<p>LHDs may ask for more information about workers with COVID, including their:</p>
 
 
 
-<ul><li>Job description</li><li>Location</li><li>Work schedule</li><li>City and county of residence</li></ul>
 
 
 
-<p>For more information about employer requirements, including cleaning and disinfection, see <a href="https://files.covid19.ca.gov/pdf/responding-to-covid19-workplace--en.pdf">Responding to COVID-19 in the Workplace for Employers (PDF)</a>.</p>
+
+
+
+
 
 
 
