--- a/pages/translated-posts/safer-economy-es.html
+++ b/pages/translated-posts/safer-economy-es.html
@@ -31,7 +31,7 @@ addtositemap: true
 <p> </p>
 <div class="matrix-holder"></div>
 <p class="small-text">*Los condados pequeños (aquellos con una población menor de 106,000) pueden estar sujetos a medidas de evaluación de casos alternativas para propósitos de asignación de niveles.</br> **El indicador de equidad de salud no se aplica a los condados pequeños. El indicador de equidad de la salud se usa para pasar a un nivel menos estricto.</p>
-<p> </p>    <!--{%-set data = tableauCovidMetrics[0] -%}--> <!--{%-set _varTierDate_ = data.TIER_DATE | formatDate2(false, tags) -%}--> <!--{%-set _varTierEndDate_ = data.TIER_ENDDATE | formatDate2(false, tags) -%}-->    <h3 class="has-text-align-center" id="county-status">Asignaciones de niveles actuales al {{_varTierDate_}}</h3>
+<p> </p>    <!--{%-set _varTierDate_ = tierData.TIER_DATE | formatDate2(false, tags) -%}--> <!--{%-set _varTierEndDate_ = tierData.TIER_ENDDATE | formatDate2(false, tags) -%}-->    <h3 class="has-text-align-center" id="county-status">Asignaciones de niveles actuales al {{_varTierDate_}}</h3>
 
 
 
