--- a/pages/translated-posts/safer-economy-ko.html
+++ b/pages/translated-posts/safer-economy-ko.html
@@ -31,7 +31,7 @@ addtositemap: true
 <p> </p>
 <div class="matrix-holder"></div>
 <p class="small-text">*소규모 카운티(인구수 106,000명 미만에 해당)는 단계를 평가할 목적으로 대체 사례 평가 방안을 적용할 수도 있습니다.</br> **의료 형평성 메트릭은 소규모 카운티의 경우 적용되지 않습니다. 의료 형평성 메트릭은 더 완화된 단계로 이동하기 위해 사용됩니다.</p>
-<p> </p>    <!--{%-set data = tableauCovidMetrics[0] -%}--> <!--{%-set _varTierDate_ = data.TIER_DATE | formatDate2(false, tags) -%}--> <!--{%-set _varTierEndDate_ = data.TIER_ENDDATE | formatDate2(false, tags) -%}-->    <h3 class="has-text-align-center" id="county-status">현재 단계 배정 {{_varTierDate_}}</h3>
+<p> </p>    <!--{%-set _varTierDate_ = tierData.TIER_DATE | formatDate2(false, tags) -%}--> <!--{%-set _varTierEndDate_ = tierData.TIER_ENDDATE | formatDate2(false, tags) -%}-->    <h3 class="has-text-align-center" id="county-status">현재 단계 배정 {{_varTierDate_}}</h3>
 
 
 
