--- a/pages/translated-posts/safer-economy-vi.html
+++ b/pages/translated-posts/safer-economy-vi.html
@@ -31,7 +31,7 @@ addtositemap: true
 <p> </p>
 <div class="matrix-holder"></div>
 <p class="small-text">*Các quận nhỏ (có quy mô dân số dưới 106,000 người) có thể thay đổi các biện pháp đánh giá ca bệnh vì mục đích chỉ định cấp.</br> **Chỉ số công bằng sức khỏe không được áp dụng tại các quận nhỏ. Chỉ số công bằng sức khỏe được sử dụng để chuyển sang cấp ít hạn chế hơn.</p>
-<p> </p>    <!--{%-set data = tableauCovidMetrics[0] -%}--> <!--{%-set _varTierDate_ = data.TIER_DATE | formatDate2(false, tags) -%}--> <!--{%-set _varTierEndDate_ = data.TIER_ENDDATE | formatDate2(false, tags) -%}-->    <h3 class="has-text-align-center" id="county-status">Chỉ định cấp quận hiện tại kể từ {{_varTierDate_}}</h3>
+<p> </p>    <!--{%-set _varTierDate_ = tierData.TIER_DATE | formatDate2(false, tags) -%}--> <!--{%-set _varTierEndDate_ = tierData.TIER_ENDDATE | formatDate2(false, tags) -%}-->    <h3 class="has-text-align-center" id="county-status">Chỉ định cấp quận hiện tại kể từ {{_varTierDate_}}</h3>
 
 
 
