--- a/pages/translated-posts/safer-economy-zh-hant.html
+++ b/pages/translated-posts/safer-economy-zh-hant.html
@@ -31,7 +31,7 @@ addtositemap: true
 <p> </p>
 <div class="matrix-holder"></div>
 <p class="small-text">*可能會對小縣（人口少於106,000人的縣）採用其他病例評估措施，以進行等級劃分。</br>**健康公平指標不適用於小縣。健康公平指標是用於讓某縣移至限制性較低的等級。</p>
-<p> </p>    <!--{%-set data = tableauCovidMetrics[0] -%}--> <!--{%-set _varTierDate_ = data.TIER_DATE | formatDate2(false, tags) -%}--> <!--{%-set _varTierEndDate_ = data.TIER_ENDDATE | formatDate2(false, tags) -%}-->    <h3 class="has-text-align-center" id="county-status">當前等級劃分（截至 {{_varTierDate_}}</h3>
+<p> </p>    <!--{%-set _varTierDate_ = tierData.TIER_DATE | formatDate2(false, tags) -%}--> <!--{%-set _varTierEndDate_ = tierData.TIER_ENDDATE | formatDate2(false, tags) -%}-->    <h3 class="has-text-align-center" id="county-status">當前等級劃分（截至 {{_varTierDate_}}</h3>
 
 
 
