deploy: bde979329f3075f357ed0aabb39a1b5c17c1d344

--- a/ar/safer-economy/index.html
+++ b/ar/safer-economy/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>برامج تخطيطية لاقتصاد أكثر أمانا</h1>
           
-            <p class="small-text">Last updated&nbsp;4:41 م الساعة 17 نوفمبر 2020</p>
+            <p class="small-text">Last updated&nbsp;4:56 م الساعة 17 نوفمبر 2020</p>
           
         </div>
       </div>
@@ -193,7 +193,7 @@
 <p> </p>
 <div class="matrix-holder"></div>
 <p class="small-text">*قد تخضع المقاطعات الصغيرة (تلك التي يقل عدد سكانها عن 106,000 نسمة) لتدابير بديلة لتقييم الحالات لأغراض تحديد الفئة.</br> **لا يتم تطبيق مقياس العدالة الصحية على المقاطعات الصغيرة. ولا يُستخدم مقياس العدالة الصحية إلا للانتقال إلى فئة أقل تقييدًا.</p>
-<p> </p>    <!----> <!----> <!---->    <h3 class="has-text-align-center" id="county-status">مهام الفئة الحالية اعتبارًا من 16 نوفمبر 2020</h3>
+<p> </p>    <!----> <!---->    <h3 class="has-text-align-center" id="county-status">مهام الفئة الحالية اعتبارًا من 16 نوفمبر 2020</h3>
 
 
 
