--- a/vi/safer-economy/index.html
+++ b/vi/safer-economy/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Kế Hoạch Chi Tiết Vì Một Nền Kinh Tế An Toàn Hơn</h1>
           
-            <p class="small-text">Last updated&nbsp;17 tháng 11, 2020 lúc 16:41</p>
+            <p class="small-text">Last updated&nbsp;17 tháng 11, 2020 lúc 16:56</p>
           
         </div>
       </div>
@@ -193,7 +193,7 @@
 <p> </p>
 <div class="matrix-holder"></div>
 <p class="small-text">*Các quận nhỏ (có quy mô dân số dưới 106,000 người) có thể thay đổi các biện pháp đánh giá ca bệnh vì mục đích chỉ định cấp.</br> **Chỉ số công bằng sức khỏe không được áp dụng tại các quận nhỏ. Chỉ số công bằng sức khỏe được sử dụng để chuyển sang cấp ít hạn chế hơn.</p>
-<p> </p>    <!----> <!----> <!---->    <h3 class="has-text-align-center" id="county-status">Chỉ định cấp quận hiện tại kể từ 16 tháng 11, 2020</h3>
+<p> </p>    <!----> <!---->    <h3 class="has-text-align-center" id="county-status">Chỉ định cấp quận hiện tại kể từ 16 tháng 11, 2020</h3>
 
 
 
