--- a/es/safer-economy/index.html
+++ b/es/safer-economy/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Plan para una economía más segura</h1>
           
-            <p class="small-text">Last updated&nbsp;17 de noviembre de 2020 a las 4:41 p. m.</p>
+            <p class="small-text">Last updated&nbsp;17 de noviembre de 2020 a las 4:56 p. m.</p>
           
         </div>
       </div>
@@ -193,7 +193,7 @@
 <p> </p>
 <div class="matrix-holder"></div>
 <p class="small-text">*Los condados pequeños (aquellos con una población menor de 106,000) pueden estar sujetos a medidas de evaluación de casos alternativas para propósitos de asignación de niveles.</br> **El indicador de equidad de salud no se aplica a los condados pequeños. El indicador de equidad de la salud se usa para pasar a un nivel menos estricto.</p>
-<p> </p>    <!----> <!----> <!---->    <h3 class="has-text-align-center" id="county-status">Asignaciones de niveles actuales al 16 de noviembre de 2020</h3>
+<p> </p>    <!----> <!---->    <h3 class="has-text-align-center" id="county-status">Asignaciones de niveles actuales al 16 de noviembre de 2020</h3>
 
 
 
