--- a/ko/safer-economy/index.html
+++ b/ko/safer-economy/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>더욱 안전한 경제</h1>
           
-            <p class="small-text">Last updated&nbsp;2020년 11월 17일 오후 4:41</p>
+            <p class="small-text">Last updated&nbsp;2020년 11월 17일 오후 4:56</p>
           
         </div>
       </div>
@@ -193,7 +193,7 @@
 <p> </p>
 <div class="matrix-holder"></div>
 <p class="small-text">*소규모 카운티(인구수 106,000명 미만에 해당)는 단계를 평가할 목적으로 대체 사례 평가 방안을 적용할 수도 있습니다.</br> **의료 형평성 메트릭은 소규모 카운티의 경우 적용되지 않습니다. 의료 형평성 메트릭은 더 완화된 단계로 이동하기 위해 사용됩니다.</p>
-<p> </p>    <!----> <!----> <!---->    <h3 class="has-text-align-center" id="county-status">현재 단계 배정 2020년 11월 16일</h3>
+<p> </p>    <!----> <!---->    <h3 class="has-text-align-center" id="county-status">현재 단계 배정 2020년 11월 16일</h3>
 
 
 
