--- a/tl/safer-economy/index.html
+++ b/tl/safer-economy/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Blueprint para sa Mas Ligtas na Ekonomiya</h1>
           
-            <p class="small-text">Last updated&nbsp;Nobyembre 17, 2020 sa 4:41 PM</p>
+            <p class="small-text">Last updated&nbsp;Nobyembre 17, 2020 sa 4:56 PM</p>
           
         </div>
       </div>
@@ -193,7 +193,7 @@
 <p> </p>
 <div class="matrix-holder"></div>
 <p class="small-text">*Puwedeng mapailalim ang maliliit na county (na wala pang 106,000 ang populasyon) sa ibang pag-iingat para sa pagtatasa ng kaso para sa mga layunin ng pagtatalaga ng tier.</br> **Hindi inilalapat ang sukatan ng equity sa kalusugan sa maliliit na county. Ginagamit ang sukatan ng equity sa kalusugan para makausad sa mas maluwag na tier.</p>
-<p> </p>    <!----> <!----> <!---->    <h3 class="has-text-align-center" id="county-status">Kasalukuyang pagtatalaga ng tier mula Nobyembre 16, 2020</h3>
+<p> </p>    <!----> <!---->    <h3 class="has-text-align-center" id="county-status">Kasalukuyang pagtatalaga ng tier mula Nobyembre 16, 2020</h3>
 
 
 
