--- a/zh-hant/safer-economy/index.html
+++ b/zh-hant/safer-economy/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>更安全的經濟藍圖</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月17日, 下午4:41</p>
+            <p class="small-text">Last updated&nbsp;2020年11月17日, 下午4:56</p>
           
         </div>
       </div>
@@ -193,7 +193,7 @@
 <p> </p>
 <div class="matrix-holder"></div>
 <p class="small-text">*可能會對小縣（人口少於106,000人的縣）採用其他病例評估措施，以進行等級劃分。</br>**健康公平指標不適用於小縣。健康公平指標是用於讓某縣移至限制性較低的等級。</p>
-<p> </p>    <!----> <!----> <!---->    <h3 class="has-text-align-center" id="county-status">當前等級劃分（截至 2020年11月16日</h3>
+<p> </p>    <!----> <!---->    <h3 class="has-text-align-center" id="county-status">當前等級劃分（截至 2020年11月16日</h3>
 
 
 
