Increased font-size for legibility on mobile. Centered chart caption.

--- a/pages/wordpress-posts/equity.html
+++ b/pages/wordpress-posts/equity.html
@@ -239,7 +239,7 @@ addtositemap: false
 
 
 
-<p class="text-small">Note<strong>:</strong> 7-day average of positivity rate with 7-day lag, for the tracts in Healthy Places Index (HPI) health equity quartile.</p>
+<p class="text-small text-center">Note<strong>:</strong> 7-day average of positivity rate with 7-day lag, for the tracts in Healthy Places Index (HPI) health equity quartile.</p>
 
 
 
