--- a/ar/industry-guidance/index.html
+++ b/ar/industry-guidance/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>التوجيهات الصناعية لخفض المخاطر</h1>
           
-            <p class="small-text">Last updated&nbsp;11:55 ص الساعة 16 نوفمبر 2020</p>
+            <p class="small-text">Last updated&nbsp;4:09 م الساعة 16 نوفمبر 2020</p>
           
         </div>
       </div>
@@ -2105,7 +2105,7 @@
 
 
 
-    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/60967.js" async="true" defer="" charset="utf-8"></script>    <p> </p>
+    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/22981.js" async="true" defer charset="utf-8"></script>    <p> </p>
 </div>
     </div>
   </div>
