--- a/es/industry-guidance/index.html
+++ b/es/industry-guidance/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Guía para las industrias para reducir riesgos</h1>
           
-            <p class="small-text">Last updated&nbsp;16 de noviembre de 2020 a las 11:55 a. m.</p>
+            <p class="small-text">Last updated&nbsp;16 de noviembre de 2020 a las 4:09 p. m.</p>
           
         </div>
       </div>
@@ -2105,7 +2105,7 @@
 
 
 
-    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/60967.js" async="true" defer="" charset="utf-8"></script>    <p> </p>
+    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/22981.js" async="true" defer charset="utf-8"></script>    <p> </p>
 </div>
     </div>
   </div>
