--- a/ko/industry-guidance/index.html
+++ b/ko/industry-guidance/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>위험 감소를 위한 업계 지침</h1>
           
-            <p class="small-text">Last updated&nbsp;2020년 11월 16일 오전 11:55</p>
+            <p class="small-text">Last updated&nbsp;2020년 11월 16일 오후 4:09</p>
           
         </div>
       </div>
@@ -2105,7 +2105,7 @@
 
 
 
-    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/60967.js" async="true" defer="" charset="utf-8"></script>    <p> </p>
+    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/22981.js" async="true" defer charset="utf-8"></script>    <p> </p>
 </div>
     </div>
   </div>
