--- a/ko/safer-economy/index.html
+++ b/ko/safer-economy/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>더욱 안전한 경제</h1>
           
-            <p class="small-text">Last updated&nbsp;2020년 11월 17일 오후 7:48</p>
+            <p class="small-text">Last updated&nbsp;2020년 11월 18일 오전 9:41</p>
           
         </div>
       </div>
