--- a/tl/data-and-tools/index.html
+++ b/tl/data-and-tools/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga datos at tool</h1>
           
-            <p class="small-text">Last updated&nbsp;Nobyembre 17, 2020 sa 7:48 PM</p>
+            <p class="small-text">Last updated&nbsp;Nobyembre 18, 2020 sa 9:41 AM</p>
           
         </div>
       </div>
