--- a/tl/industry-guidance/index.html
+++ b/tl/industry-guidance/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Gabay sa industriya sa pagpapababa ng panganib</h1>
           
-            <p class="small-text">Last updated&nbsp;Nobyembre 16, 2020 sa 11:55 AM</p>
+            <p class="small-text">Last updated&nbsp;Nobyembre 16, 2020 sa 4:09 PM</p>
           
         </div>
       </div>
@@ -2105,7 +2105,7 @@
 
 
 
-    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/60967.js" async="true" defer="" charset="utf-8"></script>    <p> </p>
+    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/22981.js" async="true" defer charset="utf-8"></script>    <p> </p>
 </div>
     </div>
   </div>
