--- a/tl/latest-news/index.html
+++ b/tl/latest-news/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Pinakabagong balita sa COVID-19</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Nobyembre 17, 2020 sa 7:48 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Nobyembre 18, 2020 sa 9:41 AM</p>
           
         </div>
       </div>
