--- a/tl/safer-economy/index.html
+++ b/tl/safer-economy/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Blueprint para sa Mas Ligtas na Ekonomiya</h1>
           
-            <p class="small-text">Last updated&nbsp;Nobyembre 17, 2020 sa 7:48 PM</p>
+            <p class="small-text">Last updated&nbsp;Nobyembre 18, 2020 sa 9:41 AM</p>
           
         </div>
       </div>
