--- a/vi/industry-guidance/index.html
+++ b/vi/industry-guidance/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Hướng dẫn dành cho từng ngành nghề để giảm nhẹ rủi ro</h1>
           
-            <p class="small-text">Last updated&nbsp;16 tháng 11, 2020 lúc 11:55</p>
+            <p class="small-text">Last updated&nbsp;16 tháng 11, 2020 lúc 16:09</p>
           
         </div>
       </div>
@@ -2105,7 +2105,7 @@
 
 
 
-    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/60967.js" async="true" defer="" charset="utf-8"></script>    <p> </p>
+    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/22981.js" async="true" defer charset="utf-8"></script>    <p> </p>
 </div>
     </div>
   </div>
