--- a/zh-hans/industry-guidance/index.html
+++ b/zh-hans/industry-guidance/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>有助于降低风险的行业指引</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月16日, 上午11:55</p>
+            <p class="small-text">Last updated&nbsp;2020年11月16日, 下午4:09</p>
           
         </div>
       </div>
@@ -2105,7 +2105,7 @@
 
 
 
-    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/60967.js" async="true" defer="" charset="utf-8"></script>    <p> </p>
+    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/22981.js" async="true" defer charset="utf-8"></script>    <p> </p>
 </div>
     </div>
   </div>
