--- a/zh-hant/data-and-tools/index.html
+++ b/zh-hant/data-and-tools/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>數據和工具</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月17日, 下午7:48</p>
+            <p class="small-text">Last updated&nbsp;2020年11月18日, 上午9:41</p>
           
         </div>
       </div>
