deploy: 6a4fc6fdfda50f35b3689a5b334bbf069b90bbea

--- a/contact-tracing/index.html
+++ b/contact-tracing/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Contact tracing</h1>
           
-            <p class="small-text">Last updated&nbsp;November 16, 2020 at 3:59 PM</p>
+            <p class="small-text">Last updated&nbsp;November 18, 2020 at 9:59 AM</p>
           
         </div>
       </div>
@@ -178,7 +178,7 @@
 
 
 
-<ul><li><strong><a href="#what-is-contact-tracing">What is contact </a><a href="#what-contact-tracing-is">tracing</a><a href="#what-is-contact-tracing">?</a></strong></li><li><strong><a href="#what-a-contact-tracer-will-ask">What a contact tracer will ask and offer</a></strong></li><li><strong><a href="#private">How your information is kept private</a></strong></li><li><strong><a href="#if-you-are-contacted">What to do if you are contacted</a></strong></li><li><strong><a href="#other-programs">Other notification programs</a></strong></li><li><strong><a href="#questions">Question and answers</a></strong></li></ul>
+<ul><li><strong><a href="#what-is-contact-tracing">What is contact </a><a href="#what-contact-tracing-is">tracing</a><a href="#what-is-contact-tracing">?</a></strong></li><li><strong><a href="#what-a-contact-tracer-will-ask">What a contact tracer will ask and offer</a></strong></li><li><strong><a href="#private">How your information is kept private</a></strong></li><li><strong><a href="#if-you-are-contacted">What to do if you are contacted</a></strong></li><li><strong><a href="#other-programs">Other notification programs</a></strong></li><li><strong><a href="#questions">Questions and answers</a></strong></li></ul>
 
 
 
