deploy: 460f8eee642be5d6d54eb557eca68e371114ffea

--- a/ar/restaurants-deliver-home-meals-for-seniors/index.html
+++ b/ar/restaurants-deliver-home-meals-for-seniors/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>برنامج Great Plates Delivered: وجبات لمنازل كبار السن </h1>
           
-            <p class="small-text">Last updated&nbsp;11:45 ص الساعة 9 نوفمبر 2020</p>
+            <p class="small-text">Last updated&nbsp;4:01 م الساعة 16 نوفمبر 2020</p>
           
         </div>
       </div>
@@ -245,8 +245,7 @@
 
 
 
-<p>تواصل مع <strong><a href="/ar/hotline/">الخط الساخن لمرض COVID-19</a> </strong>في كاليفورنيا لطرح أسئلة عن فيروس كورونا: <a href="tel:[833-422-4255]">833-422-4255</a> (833-4CA-4ALL). </p>
-</div>
+<p>تواصل مع <strong><a href="/ar/hotline/">الخط الساخن لمرض COVID-19</a> </strong>في كاليفورنيا لطرح أسئلة عن فيروس كورونا: <a href="tel:[833-422-4255]">833-422-4255</a> (833-4CA-4ALL). </p>    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/63927.js" async="true" defer charset="utf-8"></script> </div>
     </div>
   </div>
   <!-- end contentBlock -->
