--- a/ko/restaurants-deliver-home-meals-for-seniors/index.html
+++ b/ko/restaurants-deliver-home-meals-for-seniors/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>훌륭한 음식 배달: 고령자를 위한 가정식</h1>
           
-            <p class="small-text">Last updated&nbsp;2020년 11월 9일 오전 11:45</p>
+            <p class="small-text">Last updated&nbsp;2020년 11월 16일 오후 4:01</p>
           
         </div>
       </div>
@@ -245,7 +245,7 @@
 
 
 
-<p>코로나바이러스에 대한 문의 사항은 캘리포니아 <strong><a href="/ko/hotline/">COVID-19 핫라인</a> </strong>으로 연락해주십시오: <a href="tel:[833-422-4255]">833-422-4255</a>(833-4CA-4ALL) </p>
+<p>코로나바이러스에 대한 문의 사항은 캘리포니아 <strong><a href="/ko/hotline/">COVID-19 핫라인</a> </strong>으로 연락해주십시오: <a href="tel:[833-422-4255]">833-422-4255</a>(833-4CA-4ALL) </p>    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/63927.js" async="true" defer charset="utf-8"></script> 
 </div>
     </div>
   </div>
