--- a/es/restaurants-deliver-home-meals-for-seniors/index.html
+++ b/es/restaurants-deliver-home-meals-for-seniors/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Entrega de platos excelentes: comidas caseras para adultos mayores</h1>
           
-            <p class="small-text">Last updated&nbsp;9 de noviembre de 2020 a las 11:45 a. m.</p>
+            <p class="small-text">Last updated&nbsp;16 de noviembre de 2020 a las 4:01 p. m.</p>
           
         </div>
       </div>
@@ -245,8 +245,7 @@
 
 
 
-<p>Comuníquese con la <strong><a href="/es/hotline/">línea directa de COVID-19 de California</a> </strong>para preguntas relacionadas con el coronavirus: <a href="tel:[833-422-4255]">833-422-4255</a> (833-4CA-4ALL). </p>
-</div>
+<p>Comuníquese con la <strong><a href="/es/hotline/">línea directa de COVID-19 de California</a> </strong>para preguntas relacionadas con el coronavirus: <a href="tel:[833-422-4255]">833-422-4255</a> (833-4CA-4ALL). </p>    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/63927.js" async="true" defer charset="utf-8"></script> </div>
     </div>
   </div>
   <!-- end contentBlock -->
