--- a/tl/restaurants-deliver-home-meals-for-seniors/index.html
+++ b/tl/restaurants-deliver-home-meals-for-seniors/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Great Plates Delivered: Home meals for seniors</h1>
           
-            <p class="small-text">Last updated&nbsp;Nobyembre 9, 2020 sa 11:45 AM</p>
+            <p class="small-text">Last updated&nbsp;Nobyembre 16, 2020 sa 4:01 PM</p>
           
         </div>
       </div>
@@ -245,8 +245,7 @@
 
 
 
-<p>Makipag-ugnayan sa <strong><a href="/tl/hotline/">hotline sa COVID-19</a> </strong> ng California para sa mga tanong tungkol sa coronavirus: <a href="tel:[833-422-4255]">833-422-4255</a> (833-4CA-4ALL). </p>
-</div>
+<p>Makipag-ugnayan sa <strong><a href="/tl/hotline/">hotline sa COVID-19</a> </strong> ng California para sa mga tanong tungkol sa coronavirus: <a href="tel:[833-422-4255]">833-422-4255</a> (833-4CA-4ALL). </p>    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/63927.js" async="true" defer charset="utf-8"></script> </div>
     </div>
   </div>
   <!-- end contentBlock -->
