--- a/vi/restaurants-deliver-home-meals-for-seniors/index.html
+++ b/vi/restaurants-deliver-home-meals-for-seniors/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Great Plates Delivered: Bữa ăn tại nhà dành cho người cao niên</h1>
           
-            <p class="small-text">Last updated&nbsp;9 tháng 11, 2020 lúc 11:45</p>
+            <p class="small-text">Last updated&nbsp;16 tháng 11, 2020 lúc 16:01</p>
           
         </div>
       </div>
@@ -245,8 +245,7 @@
 
 
 
-<p>Hãy gọi đến <strong><a href="/vi/hotline/">đường dây nóng COVID-19</a> </strong>của California nếu quý vị có câu hỏi về vi-rút corona: <a href="tel:[833-422-4255]">833-422-4255</a> (833-4CA-4ALL). </p>
-</div>
+<p>Hãy gọi đến <strong><a href="/vi/hotline/">đường dây nóng COVID-19</a> </strong>của California nếu quý vị có câu hỏi về vi-rút corona: <a href="tel:[833-422-4255]">833-422-4255</a> (833-4CA-4ALL). </p>    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/63927.js" async="true" defer charset="utf-8"></script> </div>
     </div>
   </div>
   <!-- end contentBlock -->
