--- a/zh-hant/restaurants-deliver-home-meals-for-seniors/index.html
+++ b/zh-hant/restaurants-deliver-home-meals-for-seniors/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Great Plates Delivered：為年長者送餐到家</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月9日, 上午11:45</p>
+            <p class="small-text">Last updated&nbsp;2020年11月16日, 下午4:01</p>
           
         </div>
       </div>
@@ -245,8 +245,7 @@
 
 
 
-<p>有關冠狀病毒方面的問題，請撥打加州<strong><a href="/zh-hant/hotline/">新型冠狀病毒熱線</a></strong>：<a href="tel:[833-422-4255]">833-422-4255</a> (833-4CA-4ALL)。 </p>
-</div>
+<p>有關冠狀病毒方面的問題，請撥打加州<strong><a href="/zh-hant/hotline/">新型冠狀病毒熱線</a></strong>：<a href="tel:[833-422-4255]">833-422-4255</a> (833-4CA-4ALL)。 </p>    <!-- Ethnio Activation Code --> <script type="text/javascript" language="javascript" src="//ethn.io/63927.js" async="true" defer charset="utf-8"></script> </div>
     </div>
   </div>
   <!-- end contentBlock -->
