deploy: eb0b958795d32f172737f3cd6387906ff50e342c

--- a/contact-tracing/index.html
+++ b/contact-tracing/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Contact tracing</h1>
           
-            <p class="small-text">Last updated&nbsp;November 18, 2020 at 9:59 AM</p>
+            <p class="small-text">Last updated&nbsp;November 18, 2020 at 1:37 PM</p>
           
         </div>
       </div>
@@ -494,7 +494,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Yes, you are still considered a <a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">close contact</a> even if you were wearing a mask while you were around someone with COVID-19. Studies suggest masks offer some protection to the wearer, as well as help to protect other people in case you are infected. </p>
+<p>Yes, you are still considered a <a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">close contact</a> even if you were wearing a mask while you were around someone with COVID-19. Studies suggest masks offer some protection to the wearer, as well as help to protect other people in case you are infected but they are not 100% guaranteed to stop<br>transmission.</p>
 
       </div>
     </div>
