--- a/ar/data-and-tools/index.html
+++ b/ar/data-and-tools/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>البيانات والأدوات</h1>
           
-            <p class="small-text">Last updated&nbsp;10:58 ص الساعة 18 نوفمبر 2020</p>
+            <p class="small-text">Last updated&nbsp;1:41 م الساعة 18 نوفمبر 2020</p>
           
         </div>
       </div>
