deploy: ed8f3e60dc1ebd88c22279bf9c6b768975367651

--- a/tl/business-and-employers/index.html
+++ b/tl/business-and-employers/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga negosyo at employer</h1>
           
-            <p class="small-text">Last updated&nbsp;Nobyembre 13, 2020 sa 9:42 AM</p>
+            <p class="small-text">Last updated&nbsp;Nobyembre 17, 2020 sa 11:56 AM</p>
           
         </div>
       </div>
@@ -540,29 +540,7 @@
 
 
 
-
-
-
-
-<cwds-accordion>
-  <div class="card">
-    <button class="card-header accordion-alpha" type="button" aria-expanded="false">
-      <div class="accordion-title">
-<h4>Dapat bang abisuhan ng may-ari ng isang negosyo ang mga customer kung nalantad sa COVID-19 ang isang empleyado?</h4>
-      </div>
-    </button>
-    <div class="card-container" aria-hidden="true" style="height: 0px;">
-      <div class="card-body">
-<p>Hindi mo kailangang abisuhan ang mga customer kung nalantad ang isang empleyado sa COVID-19. Kailangan mong abisuhan ang lokal na departamento ng kalusugan kung may tatlo o higit pang kaso ng COVID-19 sa iyong lugar ng trabaho sa loob ng dalawang linggo.</p>
-<p>Kapag may manggagawang nagpositibo sa o may mga sintomas ng COVID-19:</p>
-<ul><li>Pauwiin ang manggagawa.</li><li>Makipagtulungan sa iyong lokal na departamento ng kalusugan para masuportan ang pag-isolate o pag-quarantine, pagsusuri, at kung kailan puwedeng bumalik ang manggagawa sa trabaho. </li></ul>
-<p>Sundin ang <a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--tl.pdf">Playbook ng employer</a> na may impormasyon tungkol sa:</p>
-<ul><li>Kailan at paano dapat mag-ulat ang isang employer ng empleyadong nagpositibo sa COVID-19.</li><li>Ang kahulugan ng outbreak.</li><li>Pag-abiso sa mga manggagawang posibleng nalantad sa COVID-19.</li><li>Gabay sa pagsuspinde ng mga operasyon</li></ul>
-
-      </div>
-    </div>
-  </div>
-</cwds-accordion>
+<p><a href="https://as-go-covid19-d-001.azurewebsites.net/wp-admin/edit.php">Lahat ng Post</a></p>
 
 
 
@@ -570,20 +548,43 @@
 
 
 
+<h4>Anong mga hakbang ang dapat kong gawin kung may empleyadong magpopositibo sa pagsusuri sa aking negosyo?</h4>
 
 
 
+<p>Kung mapag-aalaman ng isang employer na nagpositibo ang isang manggagawa sa COVID-19 o kaya ay mayroon siyang mga sintomas:</p>
 
 
 
+<ul><li>Pauwiin ang manggagawa</li><li>Ipaalam sa kanila ang tungkol sa sick leave na available sa pamamagitan ng batas at patakaran ng kumpanya</li><li><a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--tl.pdf">Sundin ang gabay</a> tungkol sa pag-isolate, pag-quarantine, pagpapasuri, at kung kailan dapat bumalik ang manggagawa sa trabaho</li><li>Sabihan ang iba pang manggagawa na posibleng nalantad at ibigay ang sumusunod:<ul><li>Mga konsultasyon sa pangangalagang pangkalusugan at ang kanilang potensyal na pagkakalantad</li><li>Mga tagubilin para sa pagpapasuri</li><li>Impormasyon tungkol sa pag-isolate, pag-quarantine, at mga sintomas</li></ul></li><li>Panatilihing kumpidensyal ang mga pagkakakilanlan ng mga taong may pinaghihinalaan o kumpirmadong kaso</li><li>Magbigay ng mga patakaran sa sick leave na nagbibigay-daan sa mga may sakit na manggagawa na manatili sa bahay nang walang multa</li><li>Ipaalam sa mga manggagawa ang tungkol sa mga patakaran sa leave</li></ul>
 
 
 
+<p>Dapat iulat ng mga employer ang mga kaso sa COVID-19 sa mga lokal na departamento sa kalusugan (local health department, LHD) kung:</p>
 
 
 
+<ul><li>Mayroon silang tatlo o higit pang kumpirmadong kaso sa loob ng dalawang linggo</li><li>Hindi sila provider sa pangangalagang pangkalusugan</li><li>Ang mga kaso ay hindi sa isang residensyal na setting</li></ul>
 
 
+
+<p>Dapat iulat ng mga employer ang mga kaso sa LHD kung saan matatagpuan ang employer at sa LHD kung saan nakatira ang mga manggagawa. Ang mga employer ay dapat magbigay sa mga LHD ng:</p>
+
+
+
+<ul><li>Isang listahan ng mga manggagawa sa site</li><li>Impormasyon tungkol sa mga manggagawa na may kumpirmadong kaso:<ul><li>Mga posisyon sa trabaho</li><li>Mga lugar ng trabaho</li><li><a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">Mga malapit na contact</a> sa iba pang empleyado</li><li>Petsa kung kailan nagsimula ang mga sintomas</li><li>Mga naging shift habang nakakahawa</li></ul></li></ul>
+
+
+
+<p>Ang mga LHD ay puwedeng humingi ng higit pang impormasyon tungkol sa mga manggagawa na may COVID, kasama ang kanilang mga:</p>
+
+
+
+<ul><li>Paglalarawan ng trabaho</li><li>Lokasyon</li><li>Iskedyul sa trabaho</li><li>Lungsod at county kung saan nakatira</li></ul>
+
+
+
+<p>Para sa higit pang impormasyon tungkol sa mga ipinag-aatas ng employer, kasama ang paglilinis at pag-disinfect, tingnan ang <a href="https://files.covid19.ca.gov/pdf/responding-to-covid19-workplace--en.pdf">Pagtugon sa COVID-19 sa Lugar ng Trabaho para sa Mga Employer (PDF)</a>.</p>
 
 
 
