--- a/vi/business-and-employers/index.html
+++ b/vi/business-and-employers/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Doanh nghiệp và chủ hãng</h1>
           
-            <p class="small-text">Last updated&nbsp;13 tháng 11, 2020 lúc 9:42</p>
+            <p class="small-text">Last updated&nbsp;17 tháng 11, 2020 lúc 11:56</p>
           
         </div>
       </div>
@@ -540,29 +540,7 @@
 
 
 
-
-
-
-
-<cwds-accordion>
-  <div class="card">
-    <button class="card-header accordion-alpha" type="button" aria-expanded="false">
-      <div class="accordion-title">
-<h4>Chủ doanh nghiệp có nên thông báo cho khách hàng nếu có một nhân viên bị lây nhiễm COVID-19 không?</h4>
-      </div>
-    </button>
-    <div class="card-container" aria-hidden="true" style="height: 0px;">
-      <div class="card-body">
-<p>Quý vị không cần thông báo cho khách hàng nếu có nhân viên bị lây nhiễm COVID-19. Quý vị phải thông báo cho sở y tế địa phương nếu có từ ba ca mắc COVID-19 trở lên tại nơi làm việc của quý vị trong khoảng thời gian hai tuần.</p>
-<p>Khi một người lao động có kết quả xét nghiệm dương tính hoặc có các triệu chứng nhiễm COVID-19:</p>
-<ul><li>Cho người lao động đó về nhà.</li><li>Phối hợp với sở y tế địa phương của quý vị để hỗ trợ cách ly kiểm dịch hoặc tự cách ly, thực hiện xét nghiệm và xác định thời gian người lao động có thể trở lại làm việc. </li></ul>
-<p>Tuân thủ <a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--vi.pdf">Sách hướng dẫn dành cho chủ sử dụng lao động</a> bao gồm thông tin về:</p>
-<ul><li>Thời điểm và cách thức chủ sử dụng lao động phải báo cáo trường hợp nhân viên có kết quả dương tính với COVID-19</li><li>Định nghĩa về một đợt bùng phát.</li><li>Thông báo cho những người lao động có thể đã bị phơi nhiễm với COVID-19.</li><li>Hướng dẫn về việc tạm ngừng hoạt động</li></ul>
-
-      </div>
-    </div>
-  </div>
-</cwds-accordion>
+<p><a href="https://as-go-covid19-d-001.azurewebsites.net/wp-admin/edit.php">Tất Cả Các Chức Vụ</a></p>
 
 
 
@@ -570,20 +548,43 @@
 
 
 
+<h4>Tôi cần thực hiện những bước nào nếu có một nhân viên có kết quả xét nghiệm dương tính tại doanh nghiệp của mình?</h4>
 
 
 
+<p>Nếu chủ sử dụng lao động phát hiện người lao động có kết quả xét nghiệm dương tính với COVID-19 hoặc xuất hiện các triệu chứng, hãy:</p>
 
 
 
+<ul><li>Cho người lao động đó về nhà</li><li>Cho họ biết về việc được nghỉ ốm theo quy định của pháp luật và chính sách của công ty</li><li><a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--vi.pdf">Làm theo hướng dẫn</a> về tự cách ly, cách ly kiểm dịch, xét nghiệm và thời gian người lao động có thể quay lại làm việc</li><li>Thông báo cho những người lao động khác có thể đã phơi nhiễm và:<ul><li>Tiến hành tư vấn chăm sóc sức khỏe về khả năng phơi nhiễm của họ</li><li>Hướng dẫn tiến hành xét nghiệm</li><li>Cung cấp thông tin về tự cách ly, cách ly kiểm dịch và các triệu chứng</li></ul></li><li>Bảo mật danh tính của những người được xác nhận hoặc nghi ngờ nhiễm bệnh</li><li>Thực hiện chính sách nghỉ ốm cho phép người lao động bị bệnh ở nhà mà không bị phạt</li><li>Thông báo cho người lao động biết về chính sách nghỉ</li></ul>
 
 
 
+<p>Chủ sử dụng lao động phải báo cáo các ca nhiễm bệnh COVID-19 cho các sở y tế địa phương (local health department, LHD) nếu họ:</p>
 
 
 
+<ul><li>Có ba ca xác nhận nhiễm bệnh trở lên trong hai tuần</li><li>Không phải là nhà cung cấp dịch vụ chăm sóc sức khỏe</li><li>Các ca nhiễm bệnh không đang ở trong môi trường cư trú</li></ul>
 
 
+
+<p>Chủ sử dụng lao động phải báo cáo các ca bệnh cho LHD nơi đặt cơ sở của chủ sử dụng lao động và LHD nơi người lao động sinh sống. Chủ sử dụng lao động phải cung cấp cho LHD:</p>
+
+
+
+<ul><li>Danh sách toàn bộ người lao động tại cơ sở</li><li>Thông tin về những người lao động được xác nhận nhiễm bệnh:<ul><li>Chức danh công việc</li><li>Khu vực làm việc</li><li><a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">Trường hợp tiếp xúc gần</a> với những người lao động khác</li><li>Ngày bắt đầu xuất hiện triệu chứng</li><li>Các ca đã làm việc khi bị nhiễm</li></ul></li></ul>
+
+
+
+<p>LHD có thể hỏi thêm thông tin về những người lao động nhiễm bệnh COVID, bao gồm:</p>
+
+
+
+<ul><li>Mô tả công việc</li><li>Địa điểm</li><li>Lịch làm việc</li><li>Thành phố và quận cư trú</li></ul>
+
+
+
+<p>Để biết thêm thông tin về các yêu cầu đối với chủ sử dụng lao động, bao gồm cả vệ sinh và khử trùng, hãy xem <a href="https://files.covid19.ca.gov/pdf/responding-to-covid19-workplace--en.pdf">Ứng Phó với Đại Dịch COVID-19 tại Nơi Làm Việc dành cho Chủ Sử Dụng Lao Động (PDF)</a>.</p>
 
 
 
