--- a/zh-hant/business-and-employers/index.html
+++ b/zh-hant/business-and-employers/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>商業與雇主</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月13日, 上午9:42</p>
+            <p class="small-text">Last updated&nbsp;2020年11月17日, 上午11:56</p>
           
         </div>
       </div>
@@ -540,29 +540,7 @@
 
 
 
-
-
-
-
-<cwds-accordion>
-  <div class="card">
-    <button class="card-header accordion-alpha" type="button" aria-expanded="false">
-      <div class="accordion-title">
-<h4>若有員工接觸過COVID-19，企業主是否應通知客戶？</h4>
-      </div>
-    </button>
-    <div class="card-container" aria-hidden="true" style="height: 0px;">
-      <div class="card-body">
-<p>若有員工接觸過COVID-19，您可以不用通知客戶。若您的工作場所在兩週內出現三個或以上COVID-19病例，則您需要通知當地衛生局。</p>
-<p>當有員工的COVID-19檢測呈陽性或出現相關症狀時：</p>
-<ul><li>請將相關員工送返回家。</li><li>與當地衛生局合作，協助進行隔離或檢疫、進行檢測，以及確定相關員工何時可以復工。 </li></ul>
-<p>遵循<a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--zh-hant.pdf">雇主手冊</a>，該手冊中包含以下資訊：</p>
-<ul><li>雇主必須在何時，以何種方式呈報新型冠狀病毒檢測呈陽性的雇員</li><li>疫情爆發的定義。</li><li>通知可能接觸過COVID-19的員工</li><li>有關暫停營業的指引</li></ul>
-
-      </div>
-    </div>
-  </div>
-</cwds-accordion>
+<p><a href="https://as-go-covid19-d-001.azurewebsites.net/wp-admin/edit.php">所有招貼</a></p>
 
 
 
@@ -570,20 +548,43 @@
 
 
 
+<h4>如果我的企業出現檢測呈陽性的員工，該採取哪些措施？</h4>
 
 
 
+<p>如果雇主發現有員工的新型冠狀病毒檢測呈陽性或出現症狀：</p>
 
 
 
+<ul><li>請將相關員工送返回家</li><li>讓相關員工知曉透過法律和公司政策提供的病假</li><li>遵循有關隔離、檢疫、檢測，以及員工應何時復工的<a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--zh-hant.pdf">指引</a></li><li>通知可能接觸過病毒的其他員工，並提供：<ul><li>有關其潛在接觸的醫療保健諮詢</li><li>有關接受檢測的指引</li><li>有關隔離、檢疫和症狀的資訊</li></ul></li><li>對疑似或確診病例的身份保密</li><li>提供病假政策，讓生病的員工在不受到罰款的情況下留在家中</li><li>讓員工知曉休假政策</li></ul>
 
 
 
+<p>若有以下情況，雇主必須向當地衛生局 (Local Health Department, LHD) 呈報新型冠狀病毒病例：</p>
 
 
 
+<ul><li>其在兩週內出現三個或以上確診病例</li><li>其並非醫療保健提供者</li><li>病例並非出現在療養院中</li></ul>
 
 
+
+<p>雇主必須向雇主所在地的LHD和員工居住地的LHD呈報病例。雇主必須向LHD提供以下資料：</p>
+
+
+
+<ul><li>在工作場所的所有員工名單</li><li>確診員工的相關資料：<ul><li>職稱</li><li>工作區域</li><li>與其有過<a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">緊密接觸</a>的其他員工</li><li>出現症狀的日期</li><li>在具有傳染性期間工作的班次</li></ul></li></ul>
+
+
+
+<p>LHD可能會詢問有關新型冠狀病毒確診員工的更多資料，包括其：</p>
+
+
+
+<ul><li>職位描述</li><li>地點</li><li>工作時間表</li><li>所居住的市和縣</li></ul>
+
+
+
+<p>如需詳細了解雇主規定（包括清潔和消毒規定），請參閱<a href="https://files.covid19.ca.gov/pdf/responding-to-covid19-workplace--en.pdf">為雇主提供的工作場所新型冠狀病毒應對措施 (PDF)</a>。</p>
 
 
 
