deploy: 115a7f66f7b0fcc412f3c4b299a7425858ae217a

--- a/tl/contact-tracing/index.html
+++ b/tl/contact-tracing/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Contact tracing</h1>
           
-            <p class="small-text">Last updated&nbsp;Nobyembre 16, 2020 sa 1:09 PM</p>
+            <p class="small-text">Last updated&nbsp;Nobyembre 16, 2020 sa 3:59 PM</p>
           
         </div>
       </div>
@@ -389,7 +389,7 @@
 
 
 
-<p>Kung nagtatrabaho ka, posibleng kailanganin ng iyong employer na bigyan ka ng <a href="/tl/contact-tracing/#Extra-sick-leave">may bayad na sick leave at iba pang benepisyo</a>. Magbasa pa sa <a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--tl.pdf">Playbook ng Employer para sa Ligtas na Muling Pagbubukas (PDF)</a>.</p>
+<p>Kung nagtatrabaho ka, posibleng kailanganin ng iyong employer na bigyan ka ng may bayad na sick leave at iba pang benepisyo. Magbasa pa sa <a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--tl.pdf">Playbook ng Employer para sa Ligtas na Muling Pagbubukas (PDF)</a>.</p>
 
 
 
@@ -479,7 +479,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Oo, itinuturing ka pa ring isang <a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">close contact</a> kahit nakasuot ka ng mask habang nasa paligid ng isang taong may COVID-19. Ayon sa mga pag-aaral, ang mga mask ay posibleng magbigay ng kaunting proteksyon sa nagsusuot nito, at proteksyon sa ibang tao sakaling mayroon kang impeksyon. </p>
+<p>Oo, itinuturing ka pa ring isang <a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/appendix.html#contact">malapit na contact</a> kahit nakasuot ka ng mask habang nasa paligid ng isang taong may COVID-19. Ayon sa mga pag-aaral, ang mga mask ay posibleng magbigay ng kaunting proteksyon sa nagsusuot nito, at proteksyon sa ibang tao sakaling mayroon kang impeksyon. </p>
 
       </div>
     </div>
@@ -525,7 +525,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p>Ang iyong <a href="/tl/get-local-information/">lokal na departamento ng kalusugan</a> ay puwedeng makipag-ugnayan sa iyo sa maraming iba't ibang wika.</p>
+<p>Ang iyong <a href="/tl/get-local-information/">lokal na departamento ng kalusugan</a> ay maaaring makipag-ugnayan sa iyo sa maraming iba't ibang wika.</p>
 
       </div>
     </div>
