--- a/zh-hant/contact-tracing/index.html
+++ b/zh-hant/contact-tracing/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>接觸者追蹤</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月16日, 下午1:09</p>
+            <p class="small-text">Last updated&nbsp;2020年11月16日, 下午3:59</p>
           
         </div>
       </div>
@@ -247,7 +247,7 @@
     <div class="col">
       <p><strong>當您接聽來電時，接觸者追蹤即開始運作。</strong></p>
 <p>您只需要接聽電話或回覆當地衛生局發送的簡訊。 </p>
-<p>接觸者追蹤以一種匿名的方式發揮其作用。接聽電話或回覆簡訊的人數越多，加州政府就能拯救更多的生命，保住更多的工作，同時我們可以更快地重新開放學校和商業，並使其保持開放.. 您的資料始終保密。 </p>
+<p>接觸者追蹤以一種匿名的方式發揮其作用。接聽電話或回覆簡訊的人數越多，加州政府就能拯救更多的生命，保住更多的工作，同時我們可以更快地重新開放學校和商業，並使其保持開放。您的資料始終保密。 </p>
     </div>
 <div class="col-md-auto">       <img src="https://files.covid19.ca.gov/img/Asset4at2x1.png" alt="接電話的男子圖像" style="width: 250px;">     </div>
   </div>
@@ -389,7 +389,7 @@
 
 
 
-<p>如果您在工作，可能會要求您的雇主為您提供<a href="/zh-hant/contact-tracing/#Extra-sick-leave">帶薪病假及其他福利</a>。請參閱<a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--zh-hant.pdf">《雇主安全重新開放手冊》(PDF)</a> 以了解更多資訊。</p>
+<p>如果您在工作，可能會要求您的雇主為您提供帶薪病假及其他福利。請參閱<a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--zh-hant.pdf">《雇主安全重新開放手冊》(PDF)</a> 以了解更多資訊。</p>
 
 
 
