--- a/es/contact-tracing/index.html
+++ b/es/contact-tracing/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Rastreo de contactos</h1>
           
-            <p class="small-text">Last updated&nbsp;16 de noviembre de 2020 a las 1:09 p. m.</p>
+            <p class="small-text">Last updated&nbsp;16 de noviembre de 2020 a las 3:59 p. m.</p>
           
         </div>
       </div>
@@ -212,8 +212,8 @@
       <p>Los rastreadores de contactos:</p>
       <ul>
       <li>Le notifican que usted puede haber estado expuesto a COVID-19.</li>
-      <li>Verifican síntomas y cómo se siente usted</li>
-      <li>Ofrecen pruebas</li>
+      <li>Verifican síntomas y cómo se siente usted.</li>
+      <li>Ofrecen pruebas.</li>
       <li>Hablan de los siguientes pasos, como pruebas de detección, <a href="https://www.cdc.gov/coronavirus/2019-ncov/if-you-are-sick/quarantine.html">cuarentena</a>, <a href="https://www.cdc.gov/coronavirus/2019-ncov/if-you-are-sick/isolation.html">autoaislamiento</a> y atención médica.</li>
       </ul>
     </div>
@@ -222,7 +222,7 @@
 
 
 
-<h3>Rastreo de contenidos en California</h3>
+<h3>Rastreo de contactos en California</h3>
 
 
 
@@ -267,7 +267,7 @@
 
 
 
-<p>Obtendrá de forma gratuita pruebas confidenciales y atención médica, independientemente de sus ingresos, seguro médico o situación migratoria.</p>
+<p>Usted obtendrá de forma gratuita pruebas confidenciales y atención médica, independientemente de sus ingresos, seguro médico o situación migratoria.</p>
 
 
 
@@ -345,7 +345,7 @@
 
 
 
-<p>Lea la política de privacidad en la página web de <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19-Contact-Tracing.aspx">Rastreadores de contactos del Departamento de Salud Pública de California (California Department of Public Health, CDPH)</a>.</p>
+<p>Lea la política de privacidad en la página web de <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19-Contact-Tracing.aspx">Rastreo de contactos del Departamento de Salud Pública de California (California Department of Public Health, CDPH)</a>.</p>
 
 
 
@@ -389,7 +389,7 @@
 
 
 
-<p>Si trabaja, se le puede pedir a su empleador que le brinde una <a href="/es/contact-tracing/#Extra-sick-leave">licencia remunerada por enfermedad y otros beneficios</a>. Lea más en el <a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--es.pdf">Manual para empleadores para reabrir de manera segura (PDF)</a>.</p>
+<p>Si trabaja, se le puede pedir a su empleador que le brinde una licencia remunerada por enfermedad y otros beneficios. Lea más en el <a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--es.pdf">Manual para empleadores para reabrir de manera segura (PDF)</a>.</p>
 
 
 
@@ -685,7 +685,7 @@
 
 
 
-<ul><li>Póngase en contacto con su <a href="/es/get-local-information/#top">departamento de salud local</a>.</li><li>Verifique sus <a href="https://www.cdc.gov/coronavirus/2019-ncov/symptoms-testing/symptoms.html">síntomas</a>. </li><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Guidance-on-Isolation-and-Quarantine-for-COVID-19-Contact-Tracing.aspx">Guía sobre aislamiento y cuarentena para rastreo de contactos de la COVID-19</a></li><li>CDC: <a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/contact-tracing.html">Rastreo de contactos por COVID-19</a>.</li><li>CDC: <a href="https://www.cdc.gov/coronavirus/2019-ncov/daily-life-coping/managing-stress-anxiety.html">Afrontamiento del estrés</a></li><li><a href="https://toolkit.covid19.ca.gov/partners/">Kit de herramientas de respuesta a la COVID-19: Recursos para socios</a></li></ul>
+<ul><li>Póngase en contacto con su <a href="/es/get-local-information/#top">departamento de salud local</a>.</li><li>Verifique sus <a href="https://www.cdc.gov/coronavirus/2019-ncov/symptoms-testing/symptoms.html">síntomas</a>. </li><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Guidance-on-Isolation-and-Quarantine-for-COVID-19-Contact-Tracing.aspx">Guía sobre aislamiento y cuarentena para rastreo de contactos de la COVID-19</a></li><li>CDC: <a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/contact-tracing.html">Rastreo de contactos por COVID-19</a></li><li>CDC: <a href="https://www.cdc.gov/coronavirus/2019-ncov/daily-life-coping/managing-stress-anxiety.html">Afrontamiento del estrés</a></li><li><a href="https://toolkit.covid19.ca.gov/partners/">Kit de herramientas de respuesta a la COVID-19: Recursos para socios</a></li></ul>
 </div>
     </div>
   </div>
