--- a/zh-hans/contact-tracing/index.html
+++ b/zh-hans/contact-tracing/index.html
@@ -161,7 +161,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>接触者追踪</h1>
           
-            <p class="small-text">Last updated&nbsp;2020年11月16日, 下午1:09</p>
+            <p class="small-text">Last updated&nbsp;2020年11月16日, 下午3:59</p>
           
         </div>
       </div>
@@ -247,7 +247,7 @@
     <div class="col">
       <p><strong>当您接听来电时，接触者追踪即开始运作。</strong></p>
 <p>您只需要接听电话或回复当地卫生局发送的短信。 </p>
-<p>接触者追踪仅需要您以匿名的方式来完成。接听电话或回复短信的人数越多，加州政府就能拯救更多的生命，保住更多的工作，同时我们亦可更快地重新开放学校和商业，并使其保持开放.. 您的信息将一直保密。 </p>
+<p>接触者追踪仅需要您以匿名的方式来完成。接听电话或回复短信的人数越多，加州政府就能拯救更多的生命，保住更多的工作，同时我们亦可更快地重新开放学校和商业，并使其保持开放。您的信息将一直保密。 </p>
     </div>
 <div class="col-md-auto">       <img src="https://files.covid19.ca.gov/img/Asset4at2x1.png" alt="接电话的男子图像" style="width: 250px;">     </div>
   </div>
@@ -389,7 +389,7 @@
 
 
 
-<p>如果您正在工作，您的雇主可能需要为您提供<a href="/zh-hans/contact-tracing/#Extra-sick-leave">带薪病假和其他福利</a>。欲了解更多信息，请参阅<a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--zh-hans.pdf">雇主安全重新开放手册 (PDF)</a>。</p>
+<p>如果您正在工作，您的雇主可能需要为您提供带薪病假和其他福利。欲了解更多信息，请参阅<a href="https://files.covid19.ca.gov/pdf/employer-playbook-for-safe-reopening--zh-hans.pdf">雇主安全重新开放手册 (PDF)</a>。</p>
 
 
 
@@ -525,7 +525,7 @@
     </button>
     <div class="card-container" aria-hidden="true" style="height: 0px;">
       <div class="card-body">
-<p><a href="/zh-hans/get-local-information/">当地公共卫生局</a>可以使用多种不同的语言与您交流。</p>
+<p>您<a href="/zh-hans/get-local-information/">当地的公共卫生局</a>可以使用多种不同的语言与您交流。</p>
 
       </div>
     </div>
@@ -685,7 +685,7 @@
 
 
 
-<ul><li>联系您<a href="/zh-hans/get-local-information/#top">当地卫生局</a></li><li>查看您的<a href="https://www.cdc.gov/coronavirus/2019-ncov/symptoms-testing/symptoms.html">症状</a> </li><li>CDPH：<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Guidance-on-Isolation-and-Quarantine-for-COVID-19-Contact-Tracing.aspx">COVID-19接触者追踪隔离和检疫指引</a></li><li>美国疾病控制及预防中心 (Centers for Disease Control and Prevention. CDC)：<a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/contact-tracing.html">COVID-19接触者追踪</a></li><li>CDC：<a href="https://www.cdc.gov/coronavirus/2019-ncov/daily-life-coping/managing-stress-anxiety.html">应对压力</a></li><li><a href="https://toolkit.covid19.ca.gov/partners/">COVID-19应对工具包：为合作伙伴提供的资源</a></li></ul>
+<ul><li>联系您<a href="/zh-hans/get-local-information/#top">当地卫生局</a></li><li>查看您的<a href="https://www.cdc.gov/coronavirus/2019-ncov/symptoms-testing/symptoms.html">症状</a> </li><li>CDPH：<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Guidance-on-Isolation-and-Quarantine-for-COVID-19-Contact-Tracing.aspx">COVID-19接触者追踪隔离和检疫指引</a></li><li>疾病控制与预防中心 (Centers for Disease Control and Prevention. CDC)：<a href="https://www.cdc.gov/coronavirus/2019-ncov/php/contact-tracing/contact-tracing-plan/contact-tracing.html">COVID-19接触者追踪</a></li><li>CDC：<a href="https://www.cdc.gov/coronavirus/2019-ncov/daily-life-coping/managing-stress-anxiety.html">应对压力</a></li><li><a href="https://toolkit.covid19.ca.gov/partners/">COVID-19应对工具包：为合作伙伴提供的资源</a></li></ul>
 </div>
     </div>
   </div>
